* Minor enhancement(s):
  * Added support of processing 'chr' files only (FR#12996)
  * Added a configuration element to turn logging of file processing to a table on/off
  * Removed the net/ssh library include, as not using sftp for now
  * Added dependencies for other gems in the Rakefile for auto-install from Rubyforge
* Bug fix(es):
  * Added proper error handling when ftp user does not have delete rights

== 0.0.4 2007-08-16

* Major enhancement(s):
  * Removed the 'echi-conveterter-create' bin file and replaced with 'echi-converter' to have one uniform executable for installation and operation (FR#12784)
* Minor enhancement(s):
  * Added configuration file config/install_files.yml for the new install method
  * Added support for a monitor process using the Daemons library
  * Reworked the way you create, run, start and stop a project that has been created, see the README.txt for details as well as the website
  * Added the ability to set specific table names when using a specific PCO application
  * Added the ability to upgrade the files when a new gem is installed
* Bug fix(es):
  * Bug #13062 - Corrected log table population

== 0.0.5 2007-08-17

* Major enhancement(s):
* Minor enhancement(s):
  * Removed all underscores ('_') from field names in config/schemas for version 12 & 13
* Bug fix(es):
  * Bug #13165 - Corrected post processing file move

== 0.1.0 2007-08-26

* Major enhancement(s):
* Minor enhancement(s):
  * Added additional details on gem requirements
* Bug fix(es):
  * Bug #13166 - Corrected records field definition in ECHI_LOGS to integer

== 0.1.1 2007-09-17

* Major enhancement(s):
* Minor enhancement(s):
  * Removed some extraneous comments to the log
  * Added 'standard' schema definitions for revision 12 & 13 to the config directory
* Bug fix(es):
  * Fixed bug #14020 issue with binary offset
  * In binary handling properly insert a Y/N for the booleans

== 0.2.0 2007-10-21

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):