@@ -71,4 +71,6 @@
 
 * Major enhancement(s):
 * Minor enhancement(s):
+  * FR#14855 - Store processed files in a year/month directory structure based on processed date (ie - 2007/10)
+  * If the 'echi_ftp_directory' option in application.yml is left blank/nil, the system will not attempt a change directory
 * Bug fix(es):
